--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
 
 #content-container {
     max-width: 1360px;
+    margin: 0;
 }
 #header {
     display: fixed;
@@ -16,6 +17,7 @@ html {
     line-height: 69px;
     max-width: 100%;
     margin-right: 0;
+    align-items: center;
 }
 
 #header img {
@@ -42,8 +44,46 @@ li a {
 }
 
 #banner {
+    display: flex;
     background-image: url(/images/img-mission-background.jpg);
     height: 700px;
+    width: 100%;
     max-width: 1200px;
+    background-repeat: no-repeat;
+    background-size: 100%;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#banner h2 h4{
+    text-shadow: black 1px 0 10px;
+}
+
+#content {
+    text-align: center;
+    width: 1000px;
+}
+
+.image img {
+    width: 300px;
+    height: 200px;
+    margin: 0;
+    padding: 0;
+}
+
+figcaption {
+    margin-top: 10px;
+    padding: 0;
+}
+
+#media {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    max-width: 1200px;
+    flex-wrap: wrap;
 }
