--- a/style.css
+++ b/style.css
@@ -6,18 +6,19 @@ html {
     opacity: 0.9;
 }
 
-#content-container {
-    max-width: 1360px;
-    margin: 0;
-}
 #header {
-    display: fixed;
+    position: fixed;
     border-bottom: 1px solid seashell;
     height: 69px;
     line-height: 69px;
-    max-width: 100%;
-    margin-right: 0;
+    width: 100%;
     align-items: center;
+    background-color: black;
+    padding: 10px 0;
+}
+
+#banner #content {
+    position: relative;
 }
 
 #header img {
@@ -42,6 +43,7 @@ li a {
     padding: 16px;
     text-decoration: underline;
     color: seashell;
+    line-height: 69px;
 }
 
 #banner {
