--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
     width: 100%;
     align-items: center;
     background-color: black;
-    padding: 10px 0;
+    padding: 0;
     margin-top: 0;
     z-index: 2;
 }
@@ -27,7 +27,7 @@ html {
     float: left;
     margin: 0 0 0 10px;
     height: 50px;
-    padding-bottom: 0;
+    padding-top: 10px;
 }
 
 ul {
@@ -117,11 +117,6 @@ figcaption {
     text-align: center;
     margin: 75px auto;
     margin-top: 10%;
-}
-
-#location {
-    display: flex;
-    flex-direction: row;
 }
 
 .info {
